# firmware-czc

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
components/EventQueue/: CMakeLists.txt  EventQueue.cpp
components/HttpServer/: CMakeLists.txt  HttpServer.cpp  HttpServer.h
components/MqttTelemetry/: CMakeLists.txt
components/Network/: CMakeLists.txt  NetworkStateMachine.cpp  NetworkStateMachine.h  WirelessAPI.cpp  WirelessAPI.h
components/OutsideInterfaces/: CMakeLists.txt  OutsideInterface.cpp  OutsideInterface.h  OutsideSocket.cpp  OutsideSocket.h  OutsideUart.cpp  OutsideUart.h
components/RestAPI/: CMakeLists.txt  EventQueue.cpp  EventQueue.h  RestAPI.cpp  RestAPI.h
components/Storage/: CMakeLists.txt  FilesystemAPI.h  NvsAPI.cpp
components/System/: CMakeLists.txt  IoAPI.cpp  IoAPI.h  SystemManager.cpp  SystemManager.h
components/ZigBeeChip/: CMakeLists.txt  CcChipController.cpp  CcChipController.h  CcFrameAPI.cpp  CcFrameAPI.h  CcHighlevelAPI.cpp  CcHighlevelAPI.h  CcZnpAPI.cpp  CcZnpAPI.h
components/ZigBeeProxy/: CMakeLists.txt  CcChipController.cpp  CcChipController.h  CcFrameAPI.cpp  CcFrameAPI.h
documentation/: UML Conceptual Class Diagram.drawio
main/: CMakeLists.txt  EthernetAPI.cpp  EthernetAPI.h  FilesystemAPI.cpp  FilesystemAPI.h  HttpServer.cpp  HttpServer.h  IoAPI.cpp  NetworkAPI.cpp  NetworkAPI.h  NetworkStateMachine.cpp  NetworkStateMachine.h  NvsAPI.cpp  NvsAPI.h  WirelessAPI.cpp  WirelessAPI.h  configStructs.h  hello_world_main.c  main.cpp  network_event.h
main/communication/: HttpServer.cpp  HttpServer.h  RestAPI.cpp  RestAPI.h
main/esp/: IoAPI.h
main/network/: EthernetAPI.cpp  NetworkStateMachine.cpp  NetworkStateMachine.h  WirelessAPI.cpp
main/zigBeeChip/: CcFrameAPI.cpp  CcFrameAPI.h
webSource/: index.html  script.js  scripts.js  style.css
