idf_component_register(
    SRCS 
        "main.cpp"  
        "esp/FilesystemAPI.cpp" 
        "esp/NvsAPI.cpp" 
        "esp/IoAPI.cpp" 
        "httpServer/HttpServer.cpp"
        "network/EthernetAPI.cpp" 
        "network/WirelessAPI.cpp" 
        "network/NetworkStateMachine.cpp" 
        "zigBeeChip/CcZnpAPI.cpp" 
        "zigBeeChip/CcFrameAPI.cpp" 
        INCLUDE_DIRS 
        ""
        "esp"
        "httpServer"
        "network"
        "zigBeeChip"
    REQUIRES 
        spi_flash
        littlefs
        esp_netif
        esp_eth
        nvs_flash
        esp_driver_gpio
        esp_wifi
        esp_http_server
        esp_timer
)
